add interfases AuthResponse, LoginRequest, RegisterRequest to a base code
