# src/main/java/com/bobrysheva/stock_price_api/dto/JwtAuthenticationDto.java
@@ -1,9 +1,0 @@
-package com.bobrysheva.stock_price_api.dto;
-
-import lombok.Data;
-
-@Data
-public class JwtAuthenticationDto {
-    private String token;
-    private String refreshToken;
-}
